--- a/03-web/package.json
+++ b/03-web/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-react": "^1.2.0",
+    "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "vite": "^2.8.4"
@@ -35,6 +36,7 @@
     "@swc/jest": "^0.2.17",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -56,6 +58,7 @@
     "jest": "^27.5.1",
     "jest-watch-typeahead": "^1.0.0",
     "lint-staged": ">=12",
+    "msw": "^0.39.2",
     "plop": "^3.0.5",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5"
@@ -65,5 +68,8 @@
       "eslint --fix",
       "jest --findRelatedTests --bail"
     ]
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
