--- a/03-web/package.json
+++ b/03-web/package.json
@@ -19,8 +19,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@react-hook/merged-ref": "^1.3.2",
+    "@stitches/react": "^1.2.7",
     "@vitejs/plugin-react": "^1.2.0",
     "axios": "^0.26.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "vite": "^2.8.4"
@@ -38,6 +41,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
+    "@types/lodash": "^4.14.180",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
