--- a/02-api/package.json
+++ b/02-api/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@koa/cors": "^3.2.0",
     "@koa/router": "^10.1.1",
+    "dotenv": "^16.0.0",
     "koa": "^2.13.4",
-    "koa-body": "^4.2.0"
+    "koa-body": "^4.2.0",
+    "mongoose": "^6.2.8"
   },
   "devDependencies": {
+    "mongodb-memory-server": "^8.4.1",
     "nodemon": "^2.0.15",
     "supertest": "^6.2.2",
-    "vitest": "^0.7.6"
+    "vitest": "^0.7.11"
   }
 }
