--- a/03-web/package.json
+++ b/03-web/package.json
@@ -16,7 +16,8 @@
     "test": "jest",
     "lint": "eslint src",
     "typecheck": "tsc --noEmit",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@react-hook/merged-ref": "^1.3.2",
@@ -47,6 +48,7 @@
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "@typescript-eslint/utils": "^5.12.1",
+    "cypress": "^9.5.2",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-import-helpers": "^1.2.1",
